# Router-CNC-

./: .gitignore  LICENSE  README.md  app.js  index.html  pubspec.yaml  styles.css
lib/: main.dart
lib/src/native/: router_core.dart
test/: dxf_geometry_test.dart  router_core_test.dart  widget_test.dart
tests/: dxf-sheet-thickness.test.mjs  inventory-dock.test.mjs  render-depth-stability.test.mjs  sheet-carousel.test.mjs  sheet-delete-shortcut.test.mjs  sheet-editor-modal.test.mjs  sheet-visuals.test.mjs
windows/: CMakeLists.txt
windows/router_core/: CMakeLists.txt  router_core.cpp  router_core.h
windows/runner/: CMakeLists.txt
